# script-deps

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
dummy_app/: base_1.py
dummy_app/scripts/: script_gw.py
dummy_app/scripts/dummy_app/folder_a/: m_1.py
dummy_app/scripts/dummy_app/folder_c/: m_2.py
dummy_app/scripts/dummy_app/tests/unit_tests/: test_script_gw.py
src/script_deps/: main.py
src/script_deps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
